src/objects/zqu__ZList__c.object
<CustomObject>
    <description>The QuickList component instances are registered through this object.</description>
    <fields>
        <fullName>zqu__Associated_Field_Set__c</fullName>
        <label>Associated Field Set</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Associated_Sub_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Sub List</label>
        <referenceTo>zqu__ZList__c</referenceTo>
        <relationshipLabel>Lists</relationshipLabel>
        <relationshipName>Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Description__c</fullName>
        <description>Where is this being used?</description>
        <inlineHelpText>Where is this being used?</inlineHelpText>
        <label>Where is this used?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__List_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>List Name</label>
        <length>38</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>zqu__Page_Size__c</fullName>
        <defaultValue>25</defaultValue>
        <label>Page Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Relationship_Field_Name__c</fullName>
        <defaultValue>&quot;List_Parent__c&quot;</defaultValue>
        <description>For the associated sub list if any.</description>
        <label>Relationship Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__SObject_Name__c</fullName>
        <label>SObject Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Selection_Cardinality__c</fullName>
        <label>Selection Cardinality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single-Select</fullName>
                    <default>true</default>
                    <label>Single-Select</label>
                </value>
                <value>
                    <fullName>Multi-Select</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Use_Server_Side_Processing__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This option allows the administrator to control wether the QuickList component should be rendered locally (through JavaScript) or server-side (each action, e.g. changing page, sorting, requires a server call).</description>
        <inlineHelpText>This option allows the administrator to control wether the QuickList component should be rendered locally (through JavaScript) or server-side (each action, e.g. changing page, sorting, requires a server call).</inlineHelpText>
        <label>Use Server-Side Processing?</label>
        <type>Checkbox</type>
    </fields>
    <label>List</label>
    <listViews>
        <fullName>zqu__All</fullName>
        <columns>NAME</columns>
        <columns>zqu__List_Name__c</columns>
        <columns>zqu__Use_Server_Side_Processing__c</columns>
        <columns>zqu__SObject_Name__c</columns>
        <columns>zqu__Associated_Field_Set__c</columns>
        <columns>zqu__Page_Size__c</columns>
        <columns>zqu__Selection_Cardinality__c</columns>
        <columns>zqu__Associated_Sub_List__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>List Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>zqu__List_Name_Alphanumeric</fullName>
        <active>true</active>
        <description>The list name field must be alphanumeric only (no whitespace, no special characters, no dot, only numbers / letters / underscores).</description>
        <errorConditionFormula>NOT( REGEX( zqu__List_Name__c , &quot;[a-zA-Z0-9_]+&quot; ) )</errorConditionFormula>
        <errorDisplayField>zqu__List_Name__c</errorDisplayField>
        <errorMessage>The list name field must be alphanumeric only (no whitespace, no special characters, no dot, only numbers / letters / underscores).</errorMessage>
    </validationRules>
</CustomObject>